--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-world-flags": "^1.6.0",
     "tailwind-merge": "^2.2.0",
     "tailwind-variants": "^0.1.19"
   },
@@ -27,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-world-flags": "^1.4.5",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
